# week03/project2Node/routes/users.js
@@ -1,13 +1,14 @@
 const express = require("express");
 const router = express.Router();
+const { userValidation, validate } = require("../validation");
 
 const usersController = require("../controllers/users");
 
-router.get("/users", usersController.getAllUsers);
-router.get("/users/:id", usersController.getSingleUser);
-router.put("/users/:id", usersController.updateSingleUser);
-router.post("/users", usersController.addUser);
-router.delete("/users/:id", usersController.deleteSingleUser);
-router.delete("/users", usersController.deleteAllUsers);
+router.get("/", usersController.getAllUsers);
+router.get("/:id", usersController.getSingleUser);
+router.put("/:id", userValidation, validate, usersController.updateSingleUser);
+router.post("/", userValidation, validate, usersController.addUser);
+router.delete("/:id", usersController.deleteSingleUser);
+router.delete("/", usersController.deleteAllUsers);
 
 module.exports = router;
